fix icon visibility

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -18,6 +18,12 @@ pre {
   opacity: 1; /* Fully visible */
 }
 
+ #svg-git-icon {
+  display: inherit;
+  opacity: 1; /* Fully visible */
+}
+
+
 
 .side-bar {
   width: 25% !important;
